@@ -1,6 +1,6 @@
 ;;;;; -*-coding: iso-8859-1;-*-
 ;;;;;
-;;;;; $Id: menus.el,v 44.36 2004-11-12 08:22:24 _cvs_pont_lyskomelisp Exp $
+;;;;; $Id: menus.el,v 44.37 2004-12-06 10:03:02 _cvs_pont_lyskomelisp Exp $
 ;;;;; Copyright (C) 1991-2002  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM Emacs LISP client.
@@ -33,7 +33,7 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: menus.el,v 44.36 2004-11-12 08:22:24 _cvs_pont_lyskomelisp Exp $\n"))
+	      "$Id: menus.el,v 44.37 2004-12-06 10:03:02 _cvs_pont_lyskomelisp Exp $\n"))
 
 (lyskom-external-function set-buffer-menubar)
 (lyskom-external-function popup-menu)
@@ -510,7 +510,8 @@
 
 (defun lyskom-define-menu-gnu (map menus &optional specials)
   (let ((specials (or specials
-                      (lyskom-menu-guess-shortcuts (current-local-map)))))
+		      (when (current-local-map)
+			(lyskom-menu-guess-shortcuts (current-local-map))))))
     (when menus
       (lyskom-define-menu-gnu map (cdr menus) specials)
       (let ((type (car (car menus)))
